@@ -1,6 +1,7 @@
 package Hailo::Tokenizer::Characters;
 use 5.10.0;
 use Moose;
+use MooseX::Method::Signatures;
 use MooseX::StrictConstructor;
 use List::MoreUtils qw<uniq>;
 use Text::Trim;
@@ -8,28 +9,23 @@ use namespace::clean -except => 'meta';
 
 our $VERSION = '0.01';
 
-with qw(Hailo::Role::Generic
-        Hailo::Role::Tokenizer);
-
 # output -> tokens
-sub make_tokens {
-    my ($self, $line) = @_;
-
+method make_tokens($self: Str $line) {
     return split //, $line;
 }
 
 # return a list of key tokens
-sub find_key_tokens {
-    my $self = shift;
-
-    return uniq(@_);
+method find_key_tokens($self: ArrayRef $tokens) {
+    return uniq(@$tokens);
 }
 
 # tokens -> output
-sub make_output {
-    my $self = shift;
-    return trim join '', @_;
+method make_output($self: ArrayRef $reply) {
+    return trim join '', @$reply;
 }
+
+with qw(Hailo::Role::Generic
+        Hailo::Role::Tokenizer);
 
 __PACKAGE__->meta->make_immutable;
 
