@@ -13,7 +13,7 @@ subtest make_tokens => sub {
         my ($str, $tokens) = @_;
 
         is_deeply(
-            [ Hailo::Tokenizer::Words::make_tokens(undef, $str) ],
+            [ Hailo::Tokenizer::Words::make_tokens(Hailo::Tokenizer::Words->new, $str) ],
             $tokens,
             "make_tokens: <<$str>> ==> " . (join ' ', map { qq[<<$_>>] } @$tokens) . ""
         );
@@ -104,7 +104,7 @@ subtest make_output => sub {
     for my $test (@tokens) {
         my $tokens = [$toke->make_tokens($test->[0])];
         is_deeply($tokens, $test->[1], 'Tokens are correct');
-        my $output = $toke->make_output(@$tokens);
+        my $output = $toke->make_output($tokens);
         is_deeply($output, $test->[2], 'Output is correct');
     }
 
