@@ -2,6 +2,7 @@
     - Issue #13: `hailo -b brain' will launch an interactive ReadLine
       terminal
     - Don't exit() on print_version=> in run(), just return()
+    - Use MooseX::Method::Signatures for subroutine declarations
 
 0.06 Sat Jan 30 19:21:28 GMT 2010
     - Construct SQL's dbd_options with lazy_build, not default. This
